[package]
name = "p34_macro_example"
version = "0.1.0"
authors = ["Tralinc <yecanlin2@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
p34_macro_example_lib = { path = "../p34_macro_example_lib" }
p34_macro_example_derive = { path = "../p34_macro_example_lib/p34_macro_example_derive" }
